# zk-cvm

./: README.MD
axon-vm/: .gitignore  Cargo.toml  README.md
axon-vm/crates/core/: Cargo.toml
axon-vm/crates/core/src/: block_properties.rs  flags.rs  lib.rs  tracing.rs  utils.rs  witness_trace.rs
axon-vm/crates/core/src/opcodes/: parsing.rs
axon-vm/crates/opcodes/: Cargo.toml
axon-vm/crates/opcodes/src/: circuit_prices.rs  imm_mem_modifiers.rs  lib.rs  opcode.rs  system_params.rs  utils.rs
axon-vm/crates/primitives/: Cargo.toml
axon-vm/crates/primitives/src/: auxiliary.rs  queries.rs  vm.rs
axon_circuits/: Cargo.toml
axon_circuits/src/: lib.rs
axon_circuits/src/base_structures/decommit_query/: mod.rs
axon_circuits/src/base_structures/log_query/: mod.rs
axon_circuits/src/base_structures/memory_query/: mod.rs
axon_circuits/src/base_structures/precompile_input_outputs/: mod.rs
axon_circuits/src/base_structures/recursion_query/: mod.rs
axon_circuits/src/base_structures/register/: mod.rs
axon_circuits/src/base_structures/vm_state/: callstack.rs  mod.rs  saved_context.rs
axon_circuits/src/code_unpacker_sha256/: input.rs  mod.rs
axon_circuits/src/demux_log_queue/: input.rs  mod.rs
axon_circuits/src/ecrecover/: baseline.rs  decomp_table.rs  mod.rs  naf_abs_div2_table.rs  new_optimized.rs
axon_circuits/src/ecrecover/secp256k1/: fixed_base_mul_table.rs  mod.rs
axon_circuits/src/fsm_input_output/: mod.rs
axon_circuits/src/keccak256_round_function/: mod.rs
axon_circuits/src/keccak256_round_function/buffer/: mod.rs
axon_circuits/src/linear_hasher/: input.rs  mod.rs
axon_circuits/src/log_sorter/: input.rs  mod.rs
axon_circuits/src/main_vm/: cycle.rs  decoded_opcode.rs  loading.rs  mod.rs  opcode_bitmask.rs  pre_state.rs  register_input_view.rs  state_diffs.rs  utils.rs  witness_oracle.rs
axon_circuits/src/main_vm/opcodes/: add_sub.rs  binop.rs  call_ret.rs  context.rs  jump.rs  log.rs  mod.rs  mul_div.rs  nop.rs  ptr.rs  shifts.rs  uma.rs
axon_circuits/src/ram_permutation/: mod.rs
axon_circuits/src/recursion/compression/: input.rs  mod.rs
axon_circuits/src/recursion/interblock/: mod.rs
axon_circuits/src/recursion/leaf_layer/: input.rs  mod.rs
axon_circuits/src/recursion/node_layer/: mod.rs
axon_circuits/src/scheduler/: auxiliary.rs  input.rs  mod.rs
axon_circuits/src/scheduler/block_header/: mod.rs
axon_circuits/src/sha256_round_function/: mod.rs
axon_circuits/src/sort_decommittment_requests/: input.rs  mod.rs
axon_circuits/src/storage_application/: mod.rs
axon_circuits/src/storage_validity_by_grand_product/: input.rs  mod.rs  test_input.rs
axon_circuits/src/tables/: bitshift.rs  conditional.rs  mod.rs  opcodes_decoding.rs
(+71 files in other folders)
