[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
zkvm_opcodes = { path = "crates/opcodes" }
zkvm_primitives = { path = "crates/primitives" }
zkvm = { path = "crates/core" }

bitflags = "2.4"
once_cell = "1.19"
sha2 = "=0.10.8"
sha3 = "=0.10.8"
blake2 = "0.10"
alloy-primitives = "0.5"
k256 = { version = "0.13", features = ["arithmetic", "ecdsa"] }
